--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>JavaScript Questions</title>
+    <script src="js/string.js"></script>
+    <script src="js/dom.js"></script>
+    <script src="js/quiz.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
@@ -22,9 +25,6 @@
             <p><span>X </span>Not quite. There are 6 total primitive types. A new one was added with ES6.</p>
         </div>
     </div>
-    <!-- <footer>
-        <div id="logo"><img src="images/javascript_logo.png"></div>
-    </footer> -->
 
 </body>
 </html>
