refactor to native modules and ES6

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>JavaScript Questions</title>
-    <script src="js/string.js"></script>
-    <script src="js/dom.js"></script>
-    <script src="js/quiz.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/string.js" type="module"></script>
+    <script src="js/dom.js" type="module"></script>
+    <script src="js/quiz.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
 </head>
 <body>
     <div class="question" id="q01" data-answer="string,number,boolean,null, undefined, symbol">
