--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="js/string.js" type="module"></script>
     <script src="js/dom.js" type="module"></script>
     <script src="js/quiz.js" type="module"></script>
+    <script src="js/general-util.js" type="module"></script>
     <script src="js/main.js" type="module"></script>
 </head>
 <body>
